<resources>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


    <string name="cargo_name">货名</string>
    <string name="total">总量</string>
    <string name="finishedBeforeClearance">清舱前</string>
    <string name="finishedUsedTimeBeforeClearance">清舱前用时</string>
    <string name="finishedEfficiencyBeforeClearance">清舱前作业效率</string>
    <string name="clearance">清舱量</string>
    <string name="clearanceUsedTime">清舱用时</string>
    <string name="clearanceEfficiency">清舱效率</string>
    <string name="finished">完成量</string>
    <string name="finishedUsedTime">整体用时</string>
    <string name="finishedEfficiency">整体效率</string>
    <string name="reminded">剩余量</string>
    <string name="clearance_time">清舱时间</string>
    <string name="cabinFinished">整舱完成量</string>
    <string name="cabinFinishedUsedTime">整舱用时</string>
    <string name="cabinFinishedEfficiency">整舱效率</string>

    <string name="unloader_dropped">卸船机异常>></string>
    <string name="OutboardInfoRemind">舱外作业量>></string>

</resources>
