<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cargoType"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cargo_name"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finish_before_clearance"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finishedBeforeClearance"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finishedUsedTime_before_clearance"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finishedUsedTimeBeforeClearance"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finishedEfficiency_before_clearance"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finishedEfficiencyBeforeClearance"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_clearance"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clearance"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_clearanceUsedTime"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clearanceUsedTime"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_clearanceEfficiency"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/clearanceEfficiency"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finished"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finished"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finishedUsedTime"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finishedUsedTime"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_finishedEfficiency"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/finishedEfficiency"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_remainder"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reminded"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="@dimen/d70"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="完成"
            android:textColor="@color/text_89"
            android:textSize="@dimen/f15"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:background="@color/line_color" />

</LinearLayout>