<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aitewei.manager.activity.statistics.CabinStatisticsActivity">

    <FrameLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:background="@color/blue">

        <FrameLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/d25"
                android:layout_height="@dimen/d25"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:background="@mipmap/icon_back_btn_white" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_tool_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="标题"
            android:textColor="@color/white"
            android:textSize="@dimen/f18" />

        <FrameLayout
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right">

            <ImageView
                android:layout_width="@dimen/d20"
                android:layout_height="@dimen/d20"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="@dimen/d15"
                android:layout_marginRight="@dimen/d15"
                android:background="@mipmap/icon_ship_detail_refresh_btn" />

        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/btn_ship_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45"
        android:gravity="center"
        android:text="xxx船"
        android:textColor="@color/blue"
        android:textSize="@dimen/f20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d45"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/d60"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="船舱号"
            android:textColor="@color/text_31"
            android:textSize="@dimen/f15" />

        <LinearLayout
            android:id="@+id/ll_progress_contianer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d45"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cargoType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cargo_name"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/finishedBeforeClearance"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/clearance"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/finished"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reminded"
                android:textColor="@color/text_31"
                android:textSize="@dimen/f15" />

        </LinearLayout>

        <com.aitewei.manager.view.SyncHorizontalScrollView
            android:id="@+id/header_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d45"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cargoType1"
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cargo_name"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finishedBeforeClearance"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finishedUsedTimeBeforeClearance"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finishedEfficiencyBeforeClearance"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/clearance"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/clearanceUsedTime"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/clearanceEfficiency"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cabinFinished"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cabinFinishedUsedTime"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cabinFinishedEfficiency"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/reminded"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

                <TextView
                    android:layout_width="@dimen/d70"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="状态"
                    android:textColor="@color/text_31"
                    android:textSize="@dimen/f15" />

            </LinearLayout>

        </com.aitewei.manager.view.SyncHorizontalScrollView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1"
        android:background="@color/line_color" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.aitewei.manager.view.LoadGroupView
            android:id="@+id/load_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.aitewei.manager.view.NoscrollListView
                    android:id="@+id/lv_left"
                    android:layout_width="@dimen/d60"
                    android:layout_height="match_parent"
                    android:divider="@color/line_color"
                    android:dividerHeight="0dp"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <com.aitewei.manager.view.NoscrollListView
                    android:id="@+id/lv_progress_data"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/line_color"
                    android:dividerHeight="0dp"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <com.aitewei.manager.view.SyncHorizontalScrollView
                    android:id="@+id/data_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="none">

                    <com.aitewei.manager.view.NoscrollListView
                        android:id="@+id/lv_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@color/line_color"
                        android:dividerHeight="0dp"
                        android:overScrollMode="never"
                        android:scrollbars="none" />

                </com.aitewei.manager.view.SyncHorizontalScrollView>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <include layout="@layout/layout_bottom_tab_item" />

</LinearLayout>
